exports[`test the round back button matches the snapshot 1`] = `
<button
  aria-label="Back"
  className="llTiYv">
  ButtonValue
</button>
`;

exports[`test the round back button with button type given matches the snapshot 1`] = `
<button
  aria-label="Back"
  className="llTiYv"
  type="button">
  ButtonValue
</button>
`;
